# gegelati-tutorial

./: .gitignore  CMakeLists.txt  README.md  feed.xml  index.html  params.json  robots.txt  sitemap.xml
.github/workflows/: build-jekyll.yml  test-tuto.yml
about/: index.html
assets/css/: main.css  main.css.map
dat/: CMakeLists.txt  download_dat.sh
data/: apptainer_gegelati-tuto.def  main-inference.cpp
docs/: Gemfile  _config.yml  about.md  index.html  index.markdown  index.md
docs/_data/: navigation.yml
docs/_includes/head/: custom.html
docs/_layouts/: default.html
docs/_pages/: about.md  export_visualize_import.md  index.md  parallel_training.md  strengthening_agents.md  tutos.md
docs/_posts/: 2022-05-11-welcome-to-jekyll.markdown
docs/_sass/minima/: custom-styles.scss
docs/_sass/minimal-mistakes/: _page.scss  _variables.scss
docs/assets/: main.scss
docs/assets/css/: main.scss
docs/data/: .dummy
lib/: CMakeLists.txt  CMakeLists.txt.in  ReadMe.md  windows_download_visual_libs.sh
scripts/: prepare_archives.py  prepare_template.py
src/: main-manual.cpp  main.cpp  pendulum.cpp  pendulum.h  renderer.cpp  renderer.h
src/inference/: main-inference.cpp
src/manual/: main-manual.cpp
src/training/: instructions.cpp  instructions.h  main-training.cpp  pendulum_wrapper.cpp  pendulum_wrapper.h  replay.cpp  replay.h
tutos/: export-visualize-import.html  index.html  parallel-training.html  strengthening-agents.html
